Save the mappings discovered between collections URLs and configured URLs. Prevents a crash when retrieveCollections() is not called immediately. The resource must be deleted and re-created if no full sync is successfull

BUG: 263956