resources/dav/resource/davgroupwareresource.h
@@ -46,6 +46,7 @@ class DavGroupwareResource : public Akonadi::ResourceBase,
     virtual void itemAdded( const Akonadi::Item &item, const Akonadi::Collection &collection );
     virtual void itemChanged( const Akonadi::Item &item, const QSet<QByteArray> &parts );
     virtual void itemRemoved( const Akonadi::Item &item );
+    virtual void aboutToQuit();
 
   private Q_SLOTS:
     void onCollectionRemovedFinished( KJob* );
